I fixed the search bar and made it more responsive on smaller devices

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -21,25 +21,11 @@ header {
 }
 h7 {
   font-size: 13px;
-  display: flex;
-  position: relative;
-  top: -40px;
-  left: 520px;
+  text-align: center;
 }
 
 @media (max-width: 550px) {
   header {
     padding: 80px 0;
-  }
-  h7 {
-    font-size: 10px;
-    left: 120px;
-  }
-}
-
-@media (max-width: 960px) {
-  h7 {
-    font-size: 13px;
-    left: 260px;
   }
 }
