--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -1,9 +1,6 @@
 .searchEngine {
   width: 300px;
-  display: flex;
-  position: relative;
-  top: -35px;
-  left: 480px;
+  text-align: center;
   padding: 12px;
   background: rgba(204, 107, 73, 0.56);
   border-radius: 16px;
@@ -15,7 +12,6 @@
 
 @media (max-width: 550px) {
   .searchEngine {
-    left: 120px;
     width: 150px;
     padding: 5px;
   }
@@ -24,6 +20,5 @@
 @media (max-width: 960px) {
   .searchEngine {
     padding: 10px;
-    left: 230px;
   }
 }
